--- a/app/templates/about.jinja
+++ b/app/templates/about.jinja
@@ -39,7 +39,7 @@
             - View, share, and comment on other fans's collections<br></p>
 
             {% else %}
-            {{ user.username }}, your current account allows you to add collections, stories, and
+            {{ current_user.username.title() }}, your current account allows you to add collections, stories, and
             collectables to your online profile. You may share, compare, and comment on other collections.<br><br>
             Current access:<br>
             - Customize their profile<br>
@@ -69,21 +69,21 @@
                 <center><a class="btn btn-outline-danger" href="{{ url_for('auth.register') }}"
                         role="button">Register</a></center><br><br>
                 {% else %}
-                <br>
-                <h5 style="color: rgb(226, 214, 161)">
-                    Welcome back {{ user.username }}!<br><br>
 
-                    View your MARVEL(<em>
-                        <font color="red">collections</font>
-                    </em>) collection page?</h5><br>
+                <h5 style="color: rgb(226, 214, 161)">
+                    Welcome back {{ current_user.username.title() }}!<br><br>
+
+                    View your <font color="white">MARVEL(</font>
+                    <font color="red">collections</font>
+                    <font color="white">)</font> collection page?
+                </h5><br>
                 <a class="btn btn-outline-danger"
                     href="{{ url_for('social.user_page', username=current_user.username) }}" role="button">My
                     Collection</a>
-                </center><br>
+                </center><br><br>
                 <a class="btn btn-outline-danger" href="{{ url_for('social.post') }}" role="button">Add
                     Character</a><br><br>
                 {% endif %}
-
                 <ul style="list-style-type:none;">
                     <li>
                     </li>
